--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -31,7 +31,7 @@ body {
   overflow-x: hidden;
   position: relative;
   background-color: #121212 !important;
-  color: #fff !important;
+  color: #78c043 !important;
   font-family: 'Centra', sans-serif !important;
 }
 
@@ -57,7 +57,7 @@ transition: 0.32 ease-in-out;
 /*Background color of navbar as you scroll down*/
 nav.navbar.scrolled {
   padding: 0px 0;
-  background-color: #1f1f1f;
+  background-color: #192e5b;
 }
 
 /*Navbar Logo*/
@@ -68,7 +68,7 @@ nav.navbar a.navbar-brand {
 /*Customizing the navbar links at the top*/
 nav.navbar .navbar-nav .nav-link.navbar-link {
 font-weight: 400;
-color: #fff !important;
+color: #f7f7ff !important;
 letter-spacing: 0.8px;
 padding: 0 25px;
 font-size: 18px;
@@ -105,7 +105,7 @@ margin-left: 14px;
   align-items: center;
   justify-content: center;
   line-height: 1;
-  border: 1px solid #fff
+  border: 1px solid #f7f7ff
 }
 
 /*Social Media Icon Transformation*/
@@ -140,8 +140,8 @@ margin-left: 14px;
 /*For the Contact Email - Starting*/
 .navbar-text button {
   font-weight: 700;
-  color: #fff;
-  border: 1px solid #fff;
+  color: #f7f7ff;
+  border: 1px solid #f7f7ff;
   padding: 9px 17px;
   font-size: 18px;
   margin-left: 18px;
@@ -196,7 +196,7 @@ nav.navbar .navbar-toggler-icon {
   height: 17px;
   background-image: none;
   position: relative;
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid #f7f7ff;
   transition: all 300ms linear;
   top: -2px;
 }
@@ -211,7 +211,7 @@ nav.navbar .navbar-toggler-icon:before {
   width: 24px;
   position: absolute;
   height: 2px;
-  background-color: #fff;
+  background-color: #f7f7ff;
   top: 0;
   left: 0;
   content: "";
@@ -248,7 +248,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before{
 .banner {
   margin-top: 0;
   padding: 250px 0px 80px 0px;
-  background-image: url('./assets/img/Boston.jpg');
+  background-image: 
+                    url('./assets/img/Boston.jpg');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -265,6 +266,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before{
 }
 
 .banner h4 {
+  color: #577399;
   font-size: 25px;
   letter-spacing: 0.8px;
   line-height: 1;
@@ -273,7 +275,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before{
 }
 
 .banner p {
-  color: #B8B8B8;
+  color: #f7f7ff;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -421,7 +423,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before{
   background-color: transparent;
   border-radius: 0;
   padding: 17px 0;
-  color: #fff;
+  color: #bdd5ea;
   width: 100%;
   font-size: 17px;
   letter-spacing: 0.8px;
