--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -36,7 +36,7 @@ body {
 }
 
 /*Headers 1-6 */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, h7 {
   margin: 0;
   padding: 0;
   line-height: normal;
